--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <section id="main" class="flex  flex-col h-dvh justify-center items-center gap-4">
+    <section id="main" class="flex flex-col h-dvh justify-center items-center gap-4 my-4">
+        <h2 class="text-xl font-bold">Open Console and click on button</h2>
         <button id="btn_log" class="px-4 py-2 bg-indigo-500 text-slate-100 rounded hover:bg-indigo-400 w-48">console.log()</button>
         <button id="btn_info" class="px-4 py-2 bg-indigo-500 text-slate-100 rounded hover:bg-indigo-400 w-48">console.info()</button>
         <button id="btn_table"class="px-4 py-2 bg-indigo-500 text-slate-100 rounded hover:bg-indigo-400 w-48">console.table()</button>
