--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id="btn_var_bracket" class="px-4 py-2 bg-indigo-500 text-slate-100 rounded hover:bg-indigo-400 w-48">var with ${}</button>
         <button id="btn_clear" class="px-4 py-2 bg-indigo-500 text-slate-100 rounded hover:bg-indigo-400 w-48">clear console</button>
         <button id="btn_style" class="px-4 py-2 bg-indigo-500 text-slate-100 rounded hover:bg-indigo-400 w-48">style console</button>
+        <button>Click Me</button>
     </section>
 </body>
 <script src="script.js"></script>
